--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,12 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.okhttp3:okhttp:$http_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$interceptor_version"
+
+    //cardview
+    implementation "androidx.cardview:cardview:1.0.0"
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 }
