--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.okhttp3:okhttp:$http_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$interceptor_version"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
     //cardview
     implementation "androidx.cardview:cardview:1.0.0"
@@ -59,4 +60,13 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    def room_version = "2.2.3"
+
+    //room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
 }
