--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.NewsDetailActivity"/>
+        <activity android:name=".ui.activity.NewsDetailActivity" android:parentActivityName=".ui.activity.MainActivity"/>
     </application>
 
 </manifest>
